--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <form action="https://echohtmlacademy.ru/" method="post">
                   <input
                     class="input"
-                    type="password"
+                    type="email"
                     placeholder="Elektron pochta..."
                     aria-label="elektron pochta"
                   />
